feat: completed the wallet integration 2 step part

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.1",
+    "ethers": "^6.15.0",
     "mongoose": "^8.17.0",
     "node-telegram-bot-api": "^0.66.0"
   }
