--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 # bnb_customer_journey_bot   THIS IS BOT USERNAME.
 TELEGRAM_BOT_TOKEN=8179530941:AAHe4_gUNuIbwcmmmnwRuLyGnfa3TFDggV4
 MONGO_URI=mongodb://127.0.0.1:27017/bnb_customer_journey_bot
+
+#testnet
+BNB_RPC_PROVIDER=https://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
+#wss://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
+
+#mainnet
+#BNB_RPC_PROVIDER=https://chaotic-orbital-emerald.bsc.quiknode.pro/90aa0498cc24f2b8a2ad9226d32e7571490b9ef5/
+#wss://chaotic-orbital-emerald.bsc.quiknode.pro/90aa0498cc24f2b8a2ad9226d32e7571490b9ef5/
