--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
     "mongoose": "^8.17.0",
+    "moralis": "^2.27.2",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
