feat: change the BNB to Solana and complete the token display and wallet integration

--- a/.env
+++ b/.env
@@ -2,8 +2,16 @@
 TELEGRAM_BOT_TOKEN=8179530941:AAHe4_gUNuIbwcmmmnwRuLyGnfa3TFDggV4
 MONGO_URI=mongodb://127.0.0.1:27017/bnb_customer_journey_bot
 
+
+#Solana testnet
+# SOLANA_RPC_PROVIDER=https://devnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
+
+#Solana mainnet
+SOLANA_RPC_PROVIDER=https://mainnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
+
+
 #testnet
-BNB_RPC_PROVIDER=https://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
+# BNB_RPC_PROVIDER=https://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
 #wss://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
 
 #mainnet
