--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.4",
+    "bs58": "^6.0.0",
     "dotenv": "^17.2.1",
-    "ethers": "^6.15.0",
     "mongoose": "^8.17.0",
     "moralis": "^2.27.2",
     "node-telegram-bot-api": "^0.66.0"
