--- a/.env
+++ b/.env
@@ -4,15 +4,15 @@ MONGO_URI=mongodb://127.0.0.1:27017/bnb_customer_journey_bot
 
 
 #Solana testnet
-# SOLANA_RPC_PROVIDER=https://devnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
+SOLANA_RPC_PROVIDER=https://devnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
 
 #Solana mainnet
-SOLANA_RPC_PROVIDER=https://mainnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
+# SOLANA_RPC_PROVIDER=https://mainnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
 
 
 #testnet
 # BNB_RPC_PROVIDER=https://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
-#wss://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
+# wss://frosty-hidden-bridge.bsc-testnet.quiknode.pro/ed912f866572b5e8fbf0ae6f1626aa85a1493d1f/
 
 #mainnet
 #  BNB_RPC_PROVIDER=https://chaotic-orbital-emerald.bsc.quiknode.pro/90aa0498cc24f2b8a2ad9226d32e7571490b9ef5/
