--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.1",
     "mongoose": "^8.17.0",
     "moralis": "^2.27.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "node-fetch": "^3.3.2"
   }
 }
