feat: completed the token swap featurs

--- a/.env
+++ b/.env
@@ -1,13 +1,17 @@
 # bnb_customer_journey_bot   THIS IS BOT USERNAME.
-TELEGRAM_BOT_TOKEN=8179530941:AAHe4_gUNuIbwcmmmnwRuLyGnfa3TFDggV4
+# TELEGRAM_BOT_TOKEN=8179530941:AAHe4_gUNuIbwcmmmnwRuLyGnfa3TFDggV4
+
+# test_sol_customer_journey_bot
+TELEGRAM_BOT_TOKEN=8456519321:AAF1YHBwRGbkipHS_vXf8s3KtxjeyqHSd4I
+
 MONGO_URI=mongodb://127.0.0.1:27017/bnb_customer_journey_bot
 
 
 #Solana testnet
-SOLANA_RPC_PROVIDER=https://devnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
+# SOLANA_RPC_PROVIDER=https://devnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
 
 #Solana mainnet
-# SOLANA_RPC_PROVIDER=https://mainnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
+SOLANA_RPC_PROVIDER=https://mainnet.helius-rpc.com/?api-key=a3581119-3185-4c36-b698-e281526f4200
 
 
 #testnet
