--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+    "@metaplex-foundation/umi": "^1.2.0",
+    "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
+    "@metaplex-foundation/umi-storage-mock": "^1.2.0",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.4",
     "bs58": "^6.0.0",
     "dotenv": "^17.2.1",
+    "form-data": "^4.0.4",
     "mongoose": "^8.17.0",
     "moralis": "^2.27.2",
     "node-fetch": "^3.3.2",
