feat: change the read.me file to verify my repo

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 # test_sol_customer_journey_bot
 TELEGRAM_BOT_TOKEN=8456519321:AAF1YHBwRGbkipHS_vXf8s3KtxjeyqHSd4I
-
+TELEGRAM_ADMIN_ID=7868262962
 MONGO_URI=mongodb://127.0.0.1:27017/bnb_customer_journey_bot
 
 
