feat:L completed step 5

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-# bnb_customer_journey_bot   THIS IS BOT USERNAME.
+# @bnb_customer_journey_bot   THIS IS BOT USERNAME.
 # TELEGRAM_BOT_TOKEN=8179530941:AAHe4_gUNuIbwcmmmnwRuLyGnfa3TFDggV4
 
-# test_sol_customer_journey_bot
-TELEGRAM_BOT_TOKEN=8456519321:AAF1YHBwRGbkipHS_vXf8s3KtxjeyqHSd4I
+# @test_solana_journey_bot
+TELEGRAM_BOT_TOKEN=7924868467:AAGDZJgEoYcutCPy-HPatJ6LnqFmRb2iLfs
+# 8456519321:AAF1YHBwRGbkipHS_vXf8s3KtxjeyqHSd4I
 TELEGRAM_ADMIN_ID=7868262962
 MONGO_URI=mongodb://127.0.0.1:27017/bnb_customer_journey_bot
 
