feat: completed the step 6 withour OM

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # @bnb_customer_journey_bot   THIS IS BOT USERNAME.
 # TELEGRAM_BOT_TOKEN=8179530941:AAHe4_gUNuIbwcmmmnwRuLyGnfa3TFDggV4
 
-# @test_solana_journey_bot
+# @solana_ticket_journey_bot
 TELEGRAM_BOT_TOKEN=7269292552:AAHuFxnd5sVnvNpyon0KF8-RJTTk5SroxlY
 #7924868467:AAGDZJgEoYcutCPy-HPatJ6LnqFmRb2iLfs
 # 8456519321:AAF1YHBwRGbkipHS_vXf8s3KtxjeyqHSd4I
